<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.AddStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/previewImageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginHorizontal="30dp"
            android:contentDescription="@string/image_preview_description"
            app:layout_constraintBottom_toTopOf="@id/button_camera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_image"/>

        <Button
            android:id="@+id/button_gallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"
            android:text="@string/gallery"
            android:backgroundTint="@color/gray"
            android:contentDescription="@string/button_gallery_description"
            android:alpha="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/button_camera"
            app:layout_constraintBottom_toBottomOf="@id/button_camera"
            app:layout_constraintEnd_toStartOf="@id/button_camera"
            tools:alpha="100"/>

        <Button
            android:id="@+id/button_camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="30dp"
            android:text="@string/camera"
            android:backgroundTint="@color/gray"
            android:contentDescription="@string/button_camera_description"
            android:alpha="0"
            app:layout_constraintTop_toBottomOf="@id/previewImageView"
            app:layout_constraintStart_toEndOf="@id/button_gallery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/ed_add_description_layout"
            tools:alpha="100"/>

        <TextView
            android:id="@+id/tv_add_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"
            android:text="@string/description"
            android:textSize="14sp"
            android:textStyle="bold"
            android:labelFor="@string/description"
            android:alpha="0"
            app:layout_constraintTop_toBottomOf="@id/button_camera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/ed_add_description_layout"
            tools:alpha="100"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_add_description_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="14dp"
            android:alpha="0"
            app:layout_constraintTop_toBottomOf="@id/tv_add_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:alpha="100">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_add_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollHorizontally="false"
                android:inputType="textMultiLine"
                android:contentDescription="@string/ed_add_story_description"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="30dp"
            android:textSize="14sp"
            android:text="@string/share_location"
            android:textStyle="bold"
            android:alpha="0"
            app:layout_constraintTop_toBottomOf="@id/ed_add_description_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:alpha="100"/>

        <Button
            android:id="@+id/button_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="30dp"
            android:text="@string/upload"
            android:textStyle="bold"
            android:backgroundTint="@color/gray"
            android:contentDescription="@string/button_upload_description"
            android:alpha="0"
            app:layout_constraintTop_toBottomOf="@+id/switch_location"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:alpha="100"/>

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:id="@+id/progress_bar_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="visible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>