...
    <string name="ed_email_description">Enter your email here</string>
    <string name="ed_password_description">Enter your password here</string>
    <string name="button_login_description">Button to login</string>
    <string name="ed_name_description">Enter your name here</string>
    <string name="button_register">Button to Register</string>

    <string name="positive_button">Oke</string>
    <string name="alert_main">You are log out, You must log in first to use the application</string>

    <string name="retry">Retry</string>
    <string name="title_activity_maps">Maps</string>
    <string name="share_location">Share your Location</string>
    <string name="error_parsing_style_map">Style parsing failed</string>
    
...
