<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_map"
        android:title="@string/title_activity_maps"
        android:icon="@drawable/ic_map"
        android:contentDescription="@string/title_activity_maps"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_change_language"
        android:title="@string/setting_lang"
        android:icon="@drawable/ic_settings"
        android:contentDescription="@string/change_language_description"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout"
        android:contentDescription="@string/logout_description"
        app:showAsAction="ifRoom" />
</menu>